--- a/.github/workflows/on-push-actions-setup-python.yml
+++ b/.github/workflows/on-push-actions-setup-python.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   python:
-    runs-on: [ ubuntu-latest ]
+    runs-on: ubuntu-20.04
     steps:
       - run: |
           which python
